[package]
name = "networkcopy"
version = "2.2.0"
edition = "2024"
license = "MIT"

[dependencies]
rayon = "1.10"
rfd = "0.14"
indicatif = "0.17"
filetime = "0.2"
lz4_flex = "0.11"
crc32fast = "1.4"
clap = { version = "4.4", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
rand = "0.8"
dialoguer = "0.11"
